Layout bug fix, CSS update

--- a/public/css/screen.less
+++ b/public/css/screen.less
@@ -1,4 +1,5 @@
 body {
+	font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
 	background: #fff;
 	color: #444;
 }
@@ -25,15 +26,21 @@ body {
 #page {
 	background: #fff;
 	border: 1px solid #ddd;
-	padding: 1em;
+	padding: 2em;
 	margin-bottom: 1em;
 	
 	-webkit-border-radius: 6px;
-     -moz-border-radius: 6px;
-          border-radius: 6px;
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.125);
-     -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.125);
-          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.125);
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+
+	-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.125);
+	-moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.125);
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.125);
+	
+	p {
+		font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
+		line-height: 1.7em;
+	}
 }
 
 .tools {
